[package]
name = "fz"
version = "0.1.0"
authors = ["Eetu Suihkonen"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Eetsi123/fz"
description = "A minimal, cross-platform library for CLI fuzzy matching"
categories = ["command-line-interface"]
keywords = ["cli", "terminal", "fuzzy"]

[[example]]
name = "args"

[dependencies]
crossterm = "0.19.0"
fuzzy-matcher = "0.3.7"
